--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,6 +5,6 @@
     justify-content: center;
     padding: 1em;
     margin-bottom: 0;
-    background-color: #dd0c39;
-    color:#282c34;
+    background-color: #282c34;
+    color:whitesmoke;
   }
