--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,8 +3,8 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    padding: 1em;
-    margin-bottom: 2em;
+    padding: 1px;
+    margin-bottom: 1px;
     background-color: #003594;
-    color: red;
+    color:white;
   }
