--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,4 @@
-.Header {
+/*.Header {
     box-sizing: border-box;
     width: 100%;
     display: flex;
@@ -7,4 +7,4 @@
     margin-bottom: 1px;
     background-color: #003594;
     color:white;
-  }
+  }*/
