--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,5 +6,8 @@
     background-color: #282c34;
     color:whitesmoke;
     font-family: sans-serif;
-    font-weight: 100;    
+    font-weight: 100;
+    position: fixed;
+    bottom: 0px;
+       
   }
