--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,13 +1,14 @@
 .Footer {   
-    width: 100%;
+    width: 97.5%;
     justify-content: Auto;
-    padding: 22px;
-    margin-bottom: 0;
+    margin: 0;
+    padding: 9px;
     background-color: #282c34;
     color:whitesmoke;
     font-family: sans-serif;
     font-weight: 100;
     position: fixed;
     bottom: 0px;
-       
+    overflow: hidden;
+         
   }
