--- a/src/PortFolio.css
+++ b/src/PortFolio.css
@@ -1,51 +1,65 @@
-{
-    box-sizing: border-box;
-  }
+.portfolio{
+  min-height: 800px;
+  background-color: white;
+}
+.profile-pic{
+  border-radius: 50px;
+  float: left;
+  width: 100px;
+  Height: 100px;
+  background-color:black;
+}
+
+.portbody {
+  padding: 5px;
+  border-radius: 2px;
+  border-color: teal;
+}
+
   
   body {
     background-color: #f1f1f1;
-    padding: 20px;
+    padding: 0px;
     font-family: Arial;
+    
   }
   
   /* Center website */
-  .main {
-    max-width: 1000px;
-    margin: auto;
+
+  .username{
+    color: black;
+    padding: 20px 0 0 0;
+  }
+  #biodetail{
+    color: black;
+ 
+
   }
   
-  h1 {
-    font-size: 20px;
-    word-break: break-all;
+  .pic-title{
+    font: Cursive;
   }
   
-  .row {
-    margin: 8px -16px;
-  }
+
   
   /* Add padding BETWEEN each column */
   .row,
   .row > .column {
-    padding: 8px;
+    padding: 15px;
   }
   
   /* Create four equal columns that floats next to each other */
   .column {
-    float: left;
     width: 25%;
   }
   
   /* Clear floats after rows */ 
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+  
   
   /* Content */
   .content {
     background-color: white;
-    padding: 10px;
+    padding: 15px;
   }
   
   /* Responsive layout - makes a two column-layout instead of four columns */
