--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,17 +1,9 @@
-/*.Header {
-    box-sizing: border-box;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding: 1px;
-    margin-bottom: 1px;
-    background-color: #003594;
-    color:white;
-  }*/
-  .profile-pic{
-    border-radius: 50px;
-    float: left;
-    width: 100px;
-    Height: 100px;
-    background-color: black;
-  }
+.Header{
+  background: black;
+}
+#webtitle{
+  color: white;
+}
+#navbarNav{
+  color: white;
+}
