--- a/src/containers/Login.css
+++ b/src/containers/Login.css
@@ -1,6 +1,8 @@
 @media all and (min-width: 480px) {
     .Login {
       padding: 60px 0;
+      background-color: white;
+      min-height: 800px;
     }
   
     .Login form {
